--- a/Languages/Go/go_language.language.txt
+++ b/Languages/Go/go_language.language.txt
@@ -11,9 +11,10 @@ TODO:
            - move doc of go build -asmflags|toolexec
         - https://golang.org/cmd/compile/
         - https://golang.org/cmd/link/
-           - move doc of go build -ldflags
         - https://golang.org/cmd/pack/
-        - godoc: https://pkg.go.dev/golang.org/x/tools/cmd/godoc?tab=doc
+     - https://golang.org/pkg/plugin/
+        - go build -buildmode=plugin
+        - go tool link -pluginpath
      - https://pkg.go.dev/golang.org/x/tools
      - https://github.com/golang/go/wiki/GOPATH
      - https://github.com/golang/go/wiki/PackageManagementTools
@@ -23,6 +24,7 @@ TODO:
      - https://github.com/matttproud/gochecklist
      - https://github.com/golang/go/wiki/GitHubCodeLayout
      - https://github.com/golang/go/wiki/CompilerOptimizations
+     - godoc: https://pkg.go.dev/golang.org/x/tools/cmd/godoc?tab=doc
      - https://godoc.org/
      - https://pkg.go.dev/
   - https://blog.golang.org
