no commit message

--- a/Languages/Go/go_debugging.go.txt
+++ b/Languages/Go/go_debugging.go.txt
@@ -6,6 +6,7 @@
 
 
 VERSION ==>                       #See Go language
+RELATED DOCUMENTATION ==>         #See Go language
 
 
                                              /=+===============================+=\
