--- a/Languages/Go/go_language.language.txt
+++ b/Languages/Go/go_language.language.txt
@@ -6,12 +6,6 @@
 
 TODO:
   - commands:
-     - https://golang.org/cmd/
-        - https://golang.org/cmd/asm/
-           - move doc of go build -asmflags|toolexec
-        - https://golang.org/cmd/compile/
-        - https://golang.org/cmd/link/
-        - https://golang.org/cmd/pack/
      - https://golang.org/pkg/plugin/
         - go build -buildmode=plugin
         - go tool link -pluginpath
@@ -49,6 +43,18 @@ VERSION ==>                       #1.15.0
                                   #For both language and standard library
                                   #  - not the "sub-repositories" libraries
                                   #  - not the go CLI
+
+CORE DOCUMENTATION ==>            #Split between:
+                                  #  - go_language
+                                  #  - go_standard_library
+                                  #  - go_cli
+                                  #  - go_modules
+                                  #  - go_build
+                                  #  - go_linting
+                                  #  - go_fmt
+                                  #  - go_doc
+                                  #  - go_testing
+                                  #  - go_debugging
 
 
                                              /=+===============================+=\
