--- a/Languages/Go/go_testing.go.txt
+++ b/Languages/Go/go_testing.go.txt
@@ -6,10 +6,7 @@
 
 
 VERSION ==>                       #See Go language
-
-DOCUMENTED ELSEWHERE ==>          #In go debugging:
-                                  #  - go test profiling|tracing CLI flags
-                                  #  - testing.AllocsPerRun()
+RELATED DOCUMENTATION ==>         #See Go language
 
 
                                              /=+===============================+=\
