--- a/Languages/Go/go_language.language.txt
+++ b/Languages/Go/go_language.language.txt
@@ -53,6 +53,8 @@ CORE DOCUMENTATION ==>            #Split between:
                                   #  - go_linting
                                   #  - go_fmt
                                   #  - go_doc
+                                  #  - go_fix
+                                  #  - go_generate
                                   #  - go_testing
                                   #  - go_debugging
 
