no commit message

--- a/Languages/Go/go_language.language.txt
+++ b/Languages/Go/go_language.language.txt
@@ -50,7 +50,8 @@ CORE DOCUMENTATION ==>            #Split between:
                                   #  - go_cli
                                   #  - go_modules
                                   #  - go_build
-                                  #  - go_linting
+                                  #  - go_vet
+                                  #  - go_msan
                                   #  - go_fmt
                                   #  - go_doc
                                   #  - go_fix
