--- a/Languages/Go/go_language.language.txt
+++ b/Languages/Go/go_language.language.txt
@@ -57,6 +57,7 @@ CORE DOCUMENTATION ==>            #Split between:
                                   #  - go_fix
                                   #  - go_generate
                                   #  - go_testing
+                                  #  - go_test_cover
                                   #  - go_debugging
 
 
