no commit message

--- a/Languages/Go/go_testing.go.txt
+++ b/Languages/Go/go_testing.go.txt
@@ -8,7 +8,7 @@
 VERSION ==>                       #See Go language
 RELATED DOCUMENTATION ==>         #See Go language
 
-TEST COVERAGE ==>                 #See go_cover documentation
+TEST COVERAGE ==>                 #See go_test_cover documentation
 
 
                                              /=+===============================+=\
