--- a/Languages/Go/go_language.language.txt
+++ b/Languages/Go/go_language.language.txt
@@ -58,6 +58,7 @@ CORE DOCUMENTATION ==>            #Split between:
                                   #  - go_generate
                                   #  - go_testing
                                   #  - go_test_cover
+                                  #  - go_test_bench
                                   #  - go_debugging
 
 
