no commit message

--- a/Languages/Go/go_testing.go.txt
+++ b/Languages/Go/go_testing.go.txt
@@ -8,6 +8,7 @@
 VERSION ==>                       #See Go language
 RELATED DOCUMENTATION ==>         #See Go language
 
+SNAPSHOT TESTING ==>              #See go_examples documentation
 DATA-DRIVEN TESTING ==>           #See testing_quick documentation
 TEST COVERAGE ==>                 #See go_test_cover documentation
 BENCHMARKING ==>                  #See go_test_bench documentation
@@ -129,8 +130,6 @@ T.Name()->"TestNAME"              #
 T.Helper()                        #Make function as test helper, i.e. file|line information not printed
 
 
-
-
                                              /=+===============================+=\
                                             /  :                               :  \
                                             )==:      TEST ORCHESTRATION       :==(
@@ -157,26 +156,3 @@ T.Run("NAME2", FUNC(*T))->BOOL    #Runs a sub-test, for nesting|grouping tests.
                                   #  - if parallel, until T.Parallel() was called
                                   #With -run|bench, sub-test name is PARENT_NAME/NAME2
                                   #  - running only a specific sub-test also runs its parent once
-
-
-                                             /=+===============================+=\
-                                            /  :                               :  \
-                                            )==:           EXAMPLES            :==(
-                                            \  :_______________________________:  /
-                                             \=+===============================+=/
-
-
-Example[VARR][_SUFFIX]()          #Example function
-                                  #Can become a test function (instead of documenting) by adding a comment asserting stdout equals a specific STR
-                                  #Documented by godoc:
-                                  #  - VARR should be exported variable name, _-separated
-                                  #     - empty if whole package
-                                  #  - appears next to VARR documentation
-                                  #  - can append any SUFFIX
-                                  #  - if only one Example function, and there are some package scope declaration, the whole
-                                  #    file is shown, not only function
-                                  #     - i.e. full file example
-                                  #     - by convention, called FILE_example.go
-// Output: [...]                  #... is expected stdout
-                                  #Can be multiline, omitting "Output:"
-// Unordered output: [...]        #Same but line order is not significant
