no commit message

--- a/Languages/Coding_style/Linting/Go/go_vet.cli.txt
+++ b/Languages/Coding_style/Linting/Go/go_vet.cli.txt
@@ -24,6 +24,7 @@ ALTERNATIVES ==>                  #  - gofmt: styling issues
 go vet IMPORT_PATHS               #Lints for programming errors that cannot be caught by compilers, because not 100% sure it is error
                                   #Exit code non-0 if error
                                   #Runs all RULE by default
+                                  #Can be run by go test (see its doc)
 -RULE=true                        #Only run that RULE
 -RULE=false                       #Do not run that RULE
 -c=NUM                            #Show source, with NUM lines around.
