no commit message

--- a/Languages/Go/go_language.language.txt
+++ b/Languages/Go/go_language.language.txt
@@ -56,7 +56,7 @@ CORE DOCUMENTATION ==>            #Split between:
                                   #  - go_doc
                                   #  - go_fix
                                   #  - go_generate
-                                  #  - go_testing
+                                  #  - go_test
                                   #  - go_examples
                                   #  - testing_quick
                                   #  - go_test_cover
