--- a/Languages/Go/go_test.go.txt
+++ b/Languages/Go/go_test.go.txt
@@ -1,7 +1,7 @@
 
-              
-   GO_TESTING  
-              
+           
+   GO TEST  
+           
 
 
 
