no commit message

--- a/Languages/Go/go_standard_library.go.txt
+++ b/Languages/Go/go_standard_library.go.txt
@@ -280,3 +280,15 @@ DEADLINE_EXCEEDED.
 
 context.WithValue
  (CONTEXT, KEY, VAL)->CONTEXT2    #Create a CONTEXT's child with a specific Value()
+
+
+                                             /=+===============================+=\
+                                            /  :                               :  \
+                                            )==:          BREAKPOINTS          :==(
+                                            \  :_______________________________:  /
+                                             \=+===============================+=/
+
+
+runtime.Breakpoint()              #Sets a hardware breakpoint
+                                  #On x64, this will emit a SIGTRAP
+                                  #Must be done withing a debuffer that can handle those signals
