no commit message

--- a/Languages/Go/go_language.language.txt
+++ b/Languages/Go/go_language.language.txt
@@ -62,6 +62,7 @@ CORE DOCUMENTATION ==>            #Split between:
                                   #  - go_test_cover
                                   #  - go_test_bench
                                   #  - go_debugging
+                                  #  - go_tracing
                                   #  - go_concurrency_debugging
 
 
