no commit message

--- a/Languages/Go/go_language.language.txt
+++ b/Languages/Go/go_language.language.txt
@@ -61,7 +61,7 @@ CORE DOCUMENTATION ==>            #Split between:
                                   #  - testing_quick
                                   #  - go_test_cover
                                   #  - go_test_bench
-                                  #  - go_debugging
+                                  #  - go_profiling
                                   #  - go_tracing
                                   #  - go_concurrency_debugging
 
