no commit message

--- a/Languages/Go/go_language.language.txt
+++ b/Languages/Go/go_language.language.txt
@@ -44,26 +44,32 @@ VERSION ==>                       #1.15.0
                                   #  - not the "sub-repositories" libraries
                                   #  - not the go CLI
 
-CORE DOCUMENTATION ==>            #Split between:
+CORE DOCUMENTATION ==>            #Core:
                                   #  - go_language
                                   #  - go_standard_library
+                                  #Tools:
                                   #  - go_cli
                                   #  - go_modules
                                   #  - go_build
+                                  #Linting|beautifying:
+                                  #  - go_fmt
                                   #  - go_vet
                                   #  - go_msan
-                                  #  - go_fmt
+                                  #Documentation:
                                   #  - go_doc
-                                  #  - go_fix
-                                  #  - go_generate
+                                  #Testing:
                                   #  - go_test
                                   #  - go_examples
                                   #  - testing_quick
                                   #  - go_test_cover
                                   #  - go_test_bench
+                                  #Debugging:
                                   #  - go_profiling
                                   #  - go_tracing
                                   #  - go_concurrency_debugging
+                                  #Code generation:
+                                  #  - go_fix
+                                  #  - go_generate
 
 
                                              /=+===============================+=\
