no commit message

--- a/Languages/Go/go_build.cli.txt
+++ b/Languages/Go/go_build.cli.txt
@@ -451,3 +451,24 @@ go clean IMPORT_PATHS             #Remove temporary files
 
 -x                                #Verbose
 -n                                #Dry run
+
+
+                                             /=+===============================+=\
+                                            /  :                               :  \
+                                            )==:            PLUGINS            :==(
+                                            \  :_______________________________:  /
+                                             \=+===============================+=/
+
+
+
+PLUGIN ==>                        #Library loaded at runtime instead of compile-time
+                                  #Only Linux|macOS|freeBSD
+
+go build -buildmode=plugin        #Build code as plugin
+
+import "plugin"                   #
+plugin.Open('PATH')
+ ->*PLUGIN,ERROR|nil              #
+PLUGIN.Lookup('VAR')
+ ->SYMBOL,ERROR|nil               #VAR must be exported
+
