--- a/Languages/Go/go_language.language.txt
+++ b/Languages/Go/go_language.language.txt
@@ -9,7 +9,6 @@ TODO:
      - https://golang.org/pkg/plugin/
         - go build -buildmode=plugin
         - go tool link -pluginpath
-     - https://pkg.go.dev/golang.org/x/tools
      - https://github.com/golang/go/wiki/GOPATH
      - https://github.com/golang/go/wiki/PackageManagementTools
      - https://github.com/golang/go/wiki/Modules
@@ -30,6 +29,7 @@ TODO:
         - https://github.com/golang/go/wiki/Timeouts
         - https://github.com/golang/go/wiki/RateLimiting
   - https://github.com/golang?type=source
+  - https://pkg.go.dev/golang.org/x/tools
   - add VSCode shortcuts
   - delve and other debuggers
       - https://rakyll.org/coredumps/
@@ -912,6 +912,8 @@ runtime.Error                     #ERROR_INTERFACE_TYPE
 RUNTIME_ERROR.RuntimeError()      #
 
 runtime.TypeAssertionError        #RUNTIME_ERROR_TYPE for an invalid type assertion
+
+FUNC()[->ERROR]                   #Means ->ERROR|nil
 
 
                                              /=+===============================+=\
