no commit message

--- a/Languages/Go/go_build.cli.txt
+++ b/Languages/Go/go_build.cli.txt
@@ -460,15 +460,17 @@ go clean IMPORT_PATHS             #Remove temporary files
                                              \=+===============================+=/
 
 
-
 PLUGIN ==>                        #Library loaded at runtime instead of compile-time
+                                  #Is FILE.so
                                   #Only Linux|macOS|freeBSD
 
 go build -buildmode=plugin        #Build code as plugin
+go tool link -pluginpath=PATH     #Output to PATH.so instead
 
 import "plugin"                   #
 plugin.Open('PATH')
- ->*PLUGIN,ERROR|nil              #
+ ->*PLUGIN[,ERROR]                #Loads|parse plugin, but does not execute it yet
+plugin.Plugin                     #
 PLUGIN.Lookup('VAR')
- ->SYMBOL,ERROR|nil               #VAR must be exported
-
+ ->SYMBOL[,ERROR]                 #Retrieve pointer to exported VAR
+plugin.Symbol                     #*TYPE
