--- a/Languages/Go/go_language.language.txt
+++ b/Languages/Go/go_language.language.txt
@@ -6,9 +6,6 @@
 
 TODO:
   - commands:
-     - https://golang.org/pkg/plugin/
-        - go build -buildmode=plugin
-        - go tool link -pluginpath
      - https://github.com/golang/go/wiki/GOPATH
      - https://github.com/golang/go/wiki/PackageManagementTools
      - https://github.com/golang/go/wiki/Modules
@@ -17,7 +14,8 @@ TODO:
      - https://github.com/matttproud/gochecklist
      - https://github.com/golang/go/wiki/GitHubCodeLayout
      - https://github.com/golang/go/wiki/CompilerOptimizations
-     - godoc: https://pkg.go.dev/golang.org/x/tools/cmd/godoc?tab=doc
+  - godoc: https://pkg.go.dev/golang.org/x/tools/cmd/godoc?tab=doc
+  - package sites:
      - https://godoc.org/
      - https://pkg.go.dev/
   - https://blog.golang.org
