no commit message

--- a/Languages/Go/go_modules.cli.txt
+++ b/Languages/Go/go_modules.cli.txt
@@ -134,7 +134,15 @@ go build -mod=mod                 #Ignore vendor/...
 go build -mod=vendor              #Use vendor/...
                                   #Not needed with Go >=1.14
 
-REPOSITORY STRUCTURE ==>          #Due to how go CLI works, from repository root:
+
+                                             /=+===============================+=\
+                                            /  :                               :  \
+                                            )==:          REPOSITORY           :==(
+                                            \  :_______________________________:  /
+                                             \=+===============================+=/
+
+
+REPOSITORY STRUCTURE ==>          #Due to how go modules work, from repository root:
                                   #  - [REPO_PATH/]*.go: non-main PACKAGE
                                   #  - [cmd/BINARY/]*.go: main PACKAGE
                                   #  - go.mod|sum
@@ -158,7 +166,7 @@ ENVVAR GOINSECURE                 #Like -insecure, but as MODULE_PATHS
                                   #  - git tag|LBRANCH|COMMIT
                                   #Otherwise, by priority order:
                                   #  (if module-aware)
-                                  #  - latest git tag: vA.B.C[-D][+E]
+                                  #  - highest git tag: vA.B.C[-D][+E]
                                   #  - latest commit: v0.0.0-YYYYMMDDHHMMSS-XXXXXXXXXXXX
                                   #     - last part is git commit hash
                                   #  (if non-module-aware)
